// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article with automatically placed NewsletterPuff should not render another NewsletterPuff when one already exists 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <p>
              Some paragraph 1
            </p>
            <p>
              Some paragraph 2
            </p>
            <p>
              Some paragraph 3
            </p>
            <span>
              <p>
                Some paragraph 4
              </p>
              <div>
                <InlineNewsletterPuff
                  code="TNL-101"
                  copy="We’ll send you our top stories, across all sections, straight to your inbox. Simple as that."
                  headline="Best of Times"
                  section="News"
                />
              </div>
              <p
                id="last-paragraph"
              >
                Some paragraph 5
              </p>
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#FF5656"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <a
              href="/uk/politics/article/labour-party-conference-keir-starmer-speech-latest-news-0nnkxjcqq"
            >
              'Change has begun': Starmer gives first conference speech'
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              READ MORE
            </span>
            <hr />
            <span>
              SPORT
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/b168/4d1b/b9361aacf8aa15439db267471ccf52ae?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=djhM7Ifd4NH-iGmZb5IYPjRG5xrNSOCCXybgwEcfLWNTa5itFXwv715Oe8~-QYy5fenMRts0Oce6GlQ8rOhSqVhR2h1HAmJZZ8VxDL9zSWxZ~IejyHGNj0Q7LXqsxL8vfs7rypyZ94pN48bqIVvNPKi~6qf9~-qbAHx0CJJtCsQXE8102~de5dVTAn-WUIhzqY50UCaImG9IvTcX~tQxJE3aI7dYLvPa~iPpd5OxGrRaBaoQeHe-kXknkb-BpXtJ3AQvhdJXRdGSTRexyDR2eh7NQT6FJPywUz2uxYzikSzFuYYlBg2Ul2K40eQtsOBacuT0mtlwu0x0eWO5iLL~Tg__"
            />
            <a
              href="/sport/football/article/rodri-knee-injury-man-city-arsenal-x08qk7pdb"
            >
              Rodri could miss rest of season with knee injury
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <svg
              fill="none"
              height={15}
              width={14}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M.333 7.5A6.67 6.67 0 0 1 7 .833 6.67 6.67 0 0 1 13.667 7.5 6.67 6.67 0 0 1 7 14.167 6.67 6.67 0 0 1 .333 7.5Zm9.334 0-4-3v6l4-3Z"
                fill="#54145D"
                fillRule="evenodd"
              />
            </svg>
            <span
              color="#54145D"
            >
              PODCAST
            </span>
            <hr />
            <span>
              TIMES NEWS BRIEFING
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/8505/83db/efe4ca6f159524c5e9605c09e22beb63?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HNYdABcDQqUiXIfetUZ9OA2Lh5IZ82h6NT4eNrR0mgrj1vk0TFNkd5pbMEAgfjBNwCQPT9kQIoifJ3HE6qjb4D69RgSr~R0Y3uMhuju4jBbmgMIXsE0C1-QjJcSXtj427ttm4ObVlhHlsWRb2lFcO2mlmnRqstmCaCRGqD-oAtUXZYQCXA45Cu27c7ezqBkaMID5VeShG4Psk-JmSXmtMSiPjYwFKlEKktniFs8fnwjdyFlHWxVPt6F~JXUemvDvVFavY9XBYRKdhOd4SkoVhKLe3kvenIFX6~yDqERGaIt1Vh5jAKBnoDxvCXWn~kjIjLKFwOzqYpFmYaeqFFQfjg__"
            />
            <a
              href="/podcasts/times-news-briefing"
            >
              Evening Briefing Thursday 26th September
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <svg
              fill="none"
              height={15}
              width={14}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M.333 7.5A6.67 6.67 0 0 1 7 .833 6.67 6.67 0 0 1 13.667 7.5 6.67 6.67 0 0 1 7 14.167 6.67 6.67 0 0 1 .333 7.5Zm9.334 0-4-3v6l4-3Z"
                fill="#005C8A"
                fillRule="evenodd"
              />
            </svg>
            <span
              color="#005C8A"
            >
              VIDEO
            </span>
            <hr />
            <span>
              US
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/cdcb/7283/3ad7a0c137457614d3d1a693452964e1?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=g5MwasiSQlq1ZyOFr-uaC9NvL3hb1Ui3gkHd7-izDGz7zBgTSHN3~pPpEcBSwBEbzp8-dTXfITS7M4XlM5jPy3GzA7N333yrbkwqWCX~xZkHLXYjnBlwQ59ukqOaRLyWZh1vSMqQTshRPnSso07sHXh37HIWuILsM1AKs9-NgDdNaQeyZgw--70gTFHJEUQ8iQdO00BqzcvRir0SAJXC4oYSRsT6X~qLNzRucIBLfHViEEcKruSWqhv~YPkym7DgeZCYQ9kBuSWb6NxSrNtzC-FNzzIzVAjcsFrUarEEzFgZywRC3n96sBTgHG6HYdJVVpqSIhrgDhD16Y~9ri4-3Q__"
            />
            <a
              href="/world/us-world/article/donald-trump-used-assassination-attempts-advantage-us-election-2024-g9mz5wf8r"
            >
              Trump used assassination attempt to his advantage
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <svg
              fill="none"
              height={15}
              width={15}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.667 6.833h-1V4.167c0-.734-.6-1.334-1.334-1.334H7.667v-1a1.667 1.667 0 0 0-3.334 0v1H1.667c-.734 0-1.327.6-1.327 1.334V6.7h.993a1.801 1.801 0 0 1 0 3.6h-1v2.533c0 .734.6 1.334 1.334 1.334H4.2v-1a1.801 1.801 0 0 1 3.6 0v1h2.533c.734 0 1.334-.6 1.334-1.334v-2.666h1a1.667 1.667 0 0 0 0-3.334Z"
                fill="#DF7334"
              />
            </svg>
            <span
              color="#DF7334"
            >
              PLAY
            </span>
            <hr />
            <span>
              PUZZLES
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/24f9/bc87/903eed2895cf7ef34c3bd86cdb19ee74?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ZKEomwG~hc7W-ITYVzz8vKI7cKX4bkZ0xv1Ll-SW9mfR621lZvjzGwFO6F5hFrPo37GTok3RUi5G6JdS4jTXwxPPIOMYfPJzwgImrbY2eKElIBD-vSPBDK9U5OXc6dmN3600vGHDvEclr8Ar0FO8ZmXwKhnUa-hM2i2~~UOCHSHorTryt-iOn28pUC4~sqXhRSdz-5FH07IoVekjFmXYhX-mz8FCHgPvE~SrhlTmemubmMvU-FttZjY~rcyr7p9IkLWyXQ3jenq8UFRiiZ9buR0LQ6MpP85ocGQ4MCRnj2uCPVEtMU6wde34oI-GpvEa-B5Cf8zVR7GtF1ZfW5gsAw__"
            />
            <a
              href="/puzzles/crossword/times-gk-crossword-no-252-n0n70whpb"
            >
              Times General Knowledge No 12345
            </a>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </article>
</div>
`;

exports[`Article with automatically placed NewsletterPuff should render a NewsletterPuff correctly 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="News"
    data-article-template="mainstandard"
    id="article-main"
  >
    <Head
      articleUrl="https://url.io"
      domainSpecificUrl="https://www.thetimes.co.uk"
      swgProductId={null}
    />
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div />
      <article>
        <div>
          <div>
            <p>
              Some paragraph 1
            </p>
            <p>
              Some paragraph 2
            </p>
            <p>
              Some paragraph 3
            </p>
            <AutoNewsletterPuff
              code="TNL-101"
              copy="Our flagship newsletter featuring our top stories and analysis, delivered every morning."
              headline="Best of Times"
              section="News"
            />
            <span>
              <p>
                Some paragraph 4
              </p>
              <p
                id="last-paragraph"
              >
                Some paragraph 5
              </p>
            </span>
            <div
              id="paywall-portal-article-footer"
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentingConfig={
            Object {
              "account": "dummiy-spotim-id",
            }
          }
          commentsEnabled={true}
          domainSpecificUrl="https://www.thetimes.co.uk"
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
              "sliceName": "StandardSlice",
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="News"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
    <div>
      <div>
        <div>
          <div>
            <span
              color="#FF5656"
            >
              HAVE YOUR SAY
            </span>
            <hr />
            <span>
              89 RECENTLY COMMENTED
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/dd68/3e09/181fd13a92c1ab3e6319601ba403e6a9?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=OPybSiJqmJXr5pl6BAwdtIZqpBWdVVJxKv-woB4y3EieTJKxfvNMOOyjO5C6u2ZEy0eA9F8iRtAenGLBGbUIBZt322hVscJDtODxjsNc3wP2wNne7khqGCroAJkgpuVQUbP4HvXqKJ-VV8-28KjIkN~YDVxsK0JUU8KuZMgfweWwv0g8auVUXEr1eU9AvaEgR-TMxJ52sNsyC9eE9Kj47V6yfZZ7KUHcUPxtvjjsIxySgJJvfY0FKsECPp5X1y6ym5DxFoknvG~HzfsUXDcuOUvauSIrKlz~S4yhBSCJBkEi0mBN56LPf5i9IlaBRqPmSt1mXPGwYoeEtsnn1e14WA__"
            />
            <a
              href="/uk/politics/article/labour-party-conference-keir-starmer-speech-latest-news-0nnkxjcqq"
            >
              'Change has begun': Starmer gives first conference speech'
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <span
              color="#007A3F"
            >
              READ MORE
            </span>
            <hr />
            <span>
              SPORT
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/b168/4d1b/b9361aacf8aa15439db267471ccf52ae?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=djhM7Ifd4NH-iGmZb5IYPjRG5xrNSOCCXybgwEcfLWNTa5itFXwv715Oe8~-QYy5fenMRts0Oce6GlQ8rOhSqVhR2h1HAmJZZ8VxDL9zSWxZ~IejyHGNj0Q7LXqsxL8vfs7rypyZ94pN48bqIVvNPKi~6qf9~-qbAHx0CJJtCsQXE8102~de5dVTAn-WUIhzqY50UCaImG9IvTcX~tQxJE3aI7dYLvPa~iPpd5OxGrRaBaoQeHe-kXknkb-BpXtJ3AQvhdJXRdGSTRexyDR2eh7NQT6FJPywUz2uxYzikSzFuYYlBg2Ul2K40eQtsOBacuT0mtlwu0x0eWO5iLL~Tg__"
            />
            <a
              href="/sport/football/article/rodri-knee-injury-man-city-arsenal-x08qk7pdb"
            >
              Rodri could miss rest of season with knee injury
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <svg
              fill="none"
              height={15}
              width={14}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M.333 7.5A6.67 6.67 0 0 1 7 .833 6.67 6.67 0 0 1 13.667 7.5 6.67 6.67 0 0 1 7 14.167 6.67 6.67 0 0 1 .333 7.5Zm9.334 0-4-3v6l4-3Z"
                fill="#54145D"
                fillRule="evenodd"
              />
            </svg>
            <span
              color="#54145D"
            >
              PODCAST
            </span>
            <hr />
            <span>
              TIMES NEWS BRIEFING
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/8505/83db/efe4ca6f159524c5e9605c09e22beb63?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=HNYdABcDQqUiXIfetUZ9OA2Lh5IZ82h6NT4eNrR0mgrj1vk0TFNkd5pbMEAgfjBNwCQPT9kQIoifJ3HE6qjb4D69RgSr~R0Y3uMhuju4jBbmgMIXsE0C1-QjJcSXtj427ttm4ObVlhHlsWRb2lFcO2mlmnRqstmCaCRGqD-oAtUXZYQCXA45Cu27c7ezqBkaMID5VeShG4Psk-JmSXmtMSiPjYwFKlEKktniFs8fnwjdyFlHWxVPt6F~JXUemvDvVFavY9XBYRKdhOd4SkoVhKLe3kvenIFX6~yDqERGaIt1Vh5jAKBnoDxvCXWn~kjIjLKFwOzqYpFmYaeqFFQfjg__"
            />
            <a
              href="/podcasts/times-news-briefing"
            >
              Evening Briefing Thursday 26th September
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <svg
              fill="none"
              height={15}
              width={14}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M.333 7.5A6.67 6.67 0 0 1 7 .833 6.67 6.67 0 0 1 13.667 7.5 6.67 6.67 0 0 1 7 14.167 6.67 6.67 0 0 1 .333 7.5Zm9.334 0-4-3v6l4-3Z"
                fill="#005C8A"
                fillRule="evenodd"
              />
            </svg>
            <span
              color="#005C8A"
            >
              VIDEO
            </span>
            <hr />
            <span>
              US
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/cdcb/7283/3ad7a0c137457614d3d1a693452964e1?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=g5MwasiSQlq1ZyOFr-uaC9NvL3hb1Ui3gkHd7-izDGz7zBgTSHN3~pPpEcBSwBEbzp8-dTXfITS7M4XlM5jPy3GzA7N333yrbkwqWCX~xZkHLXYjnBlwQ59ukqOaRLyWZh1vSMqQTshRPnSso07sHXh37HIWuILsM1AKs9-NgDdNaQeyZgw--70gTFHJEUQ8iQdO00BqzcvRir0SAJXC4oYSRsT6X~qLNzRucIBLfHViEEcKruSWqhv~YPkym7DgeZCYQ9kBuSWb6NxSrNtzC-FNzzIzVAjcsFrUarEEzFgZywRC3n96sBTgHG6HYdJVVpqSIhrgDhD16Y~9ri4-3Q__"
            />
            <a
              href="/world/us-world/article/donald-trump-used-assassination-attempts-advantage-us-election-2024-g9mz5wf8r"
            >
              Trump used assassination attempt to his advantage
            </a>
          </div>
        </div>
      </div>
      <hr />
      <div>
        <div>
          <div>
            <svg
              fill="none"
              height={15}
              width={15}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.667 6.833h-1V4.167c0-.734-.6-1.334-1.334-1.334H7.667v-1a1.667 1.667 0 0 0-3.334 0v1H1.667c-.734 0-1.327.6-1.327 1.334V6.7h.993a1.801 1.801 0 0 1 0 3.6h-1v2.533c0 .734.6 1.334 1.334 1.334H4.2v-1a1.801 1.801 0 0 1 3.6 0v1h2.533c.734 0 1.334-.6 1.334-1.334v-2.666h1a1.667 1.667 0 0 0 0-3.334Z"
                fill="#DF7334"
              />
            </svg>
            <span
              color="#DF7334"
            >
              PLAY
            </span>
            <hr />
            <span>
              PUZZLES
            </span>
          </div>
          <div>
            <img
              src="https://s3-alpha-sig.figma.com/img/24f9/bc87/903eed2895cf7ef34c3bd86cdb19ee74?Expires=1728259200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ZKEomwG~hc7W-ITYVzz8vKI7cKX4bkZ0xv1Ll-SW9mfR621lZvjzGwFO6F5hFrPo37GTok3RUi5G6JdS4jTXwxPPIOMYfPJzwgImrbY2eKElIBD-vSPBDK9U5OXc6dmN3600vGHDvEclr8Ar0FO8ZmXwKhnUa-hM2i2~~UOCHSHorTryt-iOn28pUC4~sqXhRSdz-5FH07IoVekjFmXYhX-mz8FCHgPvE~SrhlTmemubmMvU-FttZjY~rcyr7p9IkLWyXQ3jenq8UFRiiZ9buR0LQ6MpP85ocGQ4MCRnj2uCPVEtMU6wde34oI-GpvEa-B5Cf8zVR7GtF1ZfW5gsAw__"
            />
            <a
              href="/puzzles/crossword/times-gk-crossword-no-252-n0n70whpb"
            >
              Times General Knowledge No 12345
            </a>
          </div>
        </div>
      </div>
      <hr />
    </div>
  </article>
</div>
`;
